# QQuickWidgetContainer

./: CMakeLists.txt  Container.cpp  Container.hpp  Form.ui  README.md  main.cpp  main.qml  qml.qrc
